# bomberhans2

./: .pre-commit-config.yaml  Cargo.toml  TODO.md  build.rs  flake.nix  hitchhiker.md  justfile  readme.md  rustfmt.toml
.github/workflows/: build.yml  check.yml  ci.yml  release.yml
client/: Cargo.toml
client/src/: app.rs  communication.rs  connection.rs  game.rs  gui.rs  main.rs  multiplayer.rs
lib/: Cargo.toml  build.rs
lib/src/: field.rs  game_state.rs  lib.rs  network.rs  settings.rs  utils.rs
server/: Cargo.toml
server/src/: actor.rs  client.rs  game.rs  main.rs  old_server.rs  server.rs
src/: field.rs  game.rs  gui.rs  main.rs  network.rs  rules.rs  settings.rs  utils.rs
