[package]
name = "bomberhans2"
version = "0.1.0"
edition = "2021"
authors = [ "wonko" ]
description = "a bad looking bomberman clone where dying doesn't stop you"
license = "GPL-2.0"
repository = "http://github.com/wonkodv/bomberhans2"
keywords = [ "game", "bomberman" ]
categories  = [ "games" ]
readme = "readme.md"


[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
env_logger = "0.10.0"
image = { version = "0.24.5", default-features = false, features = ["bmp"] }
log = "0.4.20"

[lints.rust]
unsafe_code = "forbid"
dead_code          = "allow" # TODO
unused_variables   = "allow" # TODO
unreachable_code   = "allow" # TODO

[lints.clippy]
unusual_byte_groupings = "allow"
zero_prefixed_literal = "allow"

cargo = "warn"
multiple_crate_versions = { level = "allow", priority=2} # 😢


pedantic = "warn"
cast_possible_wrap = "allow"         # working with numbers is hard :/
cast_possible_truncation = "allow"   # working with numbers is hard :/
cast_precision_loss = "allow"        # working with numbers is hard :/
cast_sign_loss = "allow"             # working with numbers is hard :/


clone_on_ref_ptr = "warn"
format_push_string = "warn"
get_unwrap = "warn"
pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
str_to_string= "warn"
string_to_string = "warn"
try_err = "warn"
unneeded_field_pattern="warn"
unseparated_literal_suffix  = "warn"
verbose_file_reads = "warn"
shadow_unrelated = "warn" # ?
