[workspace]

members = [
    "client",
    "server",
    "lib",
]

resolver = "2"

[workspace.package]
version = "0.2.18"
edition = "2021"
authors = [ "wonko" ]
description = "A bad looking bomberman clone where dying doesn't stop you"
license = "GPL-2.0"
repository = "http://github.com/wonkodv/bomberhans2"
keywords = [ "game", "bomberman" ]
categories  = [ "games" ]
readme = "readme.md"



[workspace.dependencies]
bomberhans-lib = {path = "lib"}

confy = "0.5.1"
eframe = "0.20.1"
egui = "0.20.1"
env_logger = "0.10.0"
image = { version = "0.24.5", default-features = false, features = ["bmp"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code          = "allow" # TODO
unused_variables   = "allow" # TODO
unreachable_code   = "allow" # TODO


[workspace.lints.clippy]
unusual_byte_groupings = "allow"

cargo = "warn"
multiple_crate_versions = { level = "allow", priority=2} # 😢

pedantic = "warn"
cast_possible_wrap = "allow"         # working with numbers is hard :/
cast_possible_truncation = "allow"   # working with numbers is hard :/
cast_precision_loss = "allow"        # working with numbers is hard :/
cast_sign_loss = "allow"             # working with numbers is hard :/
module_name_repetitions = "allow"

# restrict group
clone_on_ref_ptr = "warn"
format_push_string = "warn"
get_unwrap = "warn"
#pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
str_to_string= "warn"
string_to_string = "warn"
try_err = "warn"
unneeded_field_pattern="warn"
unseparated_literal_suffix  = "warn"
verbose_file_reads = "warn"


[profile.release]
strip = true
debug-assertions = true
overflow-checks = true
lto = "thin"
panic = "abort"

