[workspace]

members = [
    "client",
    "server",
    "lib",
]

resolver = "2"

[workspace.package]
version = "0.2.19"
edition = "2021"
authors = [ "wonko" ]
description = "A bad looking bomberman clone where dying doesn't stop you"
license = "GPL-2.0"
repository = "http://github.com/wonkodv/bomberhans2"
keywords = [ "game", "bomberman" ]
categories  = [ "games" ]
readme = "readme.md"



[workspace.dependencies]
bomberhans-lib = {path = "lib"}
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use    = "forbid"
dead_code          = "allow" # TODO
unused_variables   = "allow" # TODO
unreachable_code   = "allow" # TODO

[workspace.lints.clippy]
unusual_byte_groupings = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

cargo = { level = "warn", priority = -1 }
multiple_crate_versions = { level = "allow", priority=2} # 😢

pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"         # working with numbers is hard :/
cast_possible_truncation = "allow"   # working with numbers is hard :/
cast_precision_loss = "allow"        # working with numbers is hard :/
cast_sign_loss = "allow"             # working with numbers is hard :/
module_name_repetitions = "allow"
unnested_or_patterns = "allow"
single_match_else = "allow"


# restrict group
clone_on_ref_ptr = "warn"
format_push_string = "warn"
get_unwrap = "warn"
#pattern_type_mismatch = "warn"
redundant_type_annotations = "warn"
same_name_method = "warn"
str_to_string= "warn"
string_to_string = "warn"
try_err = "warn"
unneeded_field_pattern="warn"
unseparated_literal_suffix  = "warn"
verbose_file_reads = "warn"


[profile.release]
strip = true
debug-assertions = true
overflow-checks = true
lto = "thin"
panic = "abort"

