[package]
name = "bomberhans2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bomberhans-lib = { workspace = true }
log            = { workspace = true }
serde          = { workspace = true }
env_logger     = { workspace = true }

confy  = "0.5.1"
eframe = "0.20.1"
egui   = "0.20.1"
image  = { version = "0.24.5", default-features = false, features = ["bmp"] }

[lints]
workspace = true
