[package]
name = "bomberhans2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

default-run = "bomberhans2" # TODO: Why here and not in the Workspace's cargo.toml? Error message is not helpful

[dependencies]
bomberhans2-lib = { workspace = true }
log             = { workspace = true }
serde           = { workspace = true }
env_logger      = { workspace = true }
rand            = { workspace = true }
tokio           = { workspace = true }

confy  = "0.6.1"
eframe = "0.30.0"
egui   = "0.30.0"
image  = { version = "0.25.5", default-features = false, features = ["bmp"] }

[lints]
workspace = true
