[package]
name = "bomberhans-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]

log   = { workspace = true }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
serde = { workspace = true }

[lints]
workspace = true
