[package]
name = "bomberhans2-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bomberhans-lib = { workspace = true }
log            = { workspace = true }
serde          = { workspace = true }
env_logger     = { workspace = true }

[lints]
workspace = true
